{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 2,
  "lineage": "4a8a3d39-94cb-adaa-c000-be0abdef159b",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:security-group/sg-03ffe504c82f582d0",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03ffe504c82f582d0",
            "ingress": [],
            "name": "my-eks-cluster-cluster-2024031819380039790000000d",
            "name_prefix": "my-eks-cluster-cluster-",
            "owner_id": "624130542457",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-cluster-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:security-group/sg-09058c8d028147c89",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-09058c8d028147c89",
            "ingress": [],
            "name": "my-eks-cluster-node-2024031819380015840000000c",
            "name_prefix": "my-eks-cluster-node-",
            "owner_id": "624130542457",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-eks-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4194292080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ffe504c82f582d0",
            "security_group_rule_id": "sgr-09302ffe3486a2a31",
            "self": false,
            "source_security_group_id": "sg-09058c8d028147c89",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-216690946",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-053c8437b30b72187",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1701293180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-09130531bec38d664",
            "self": false,
            "source_security_group_id": "sg-03ffe504c82f582d0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2901423047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-0dc19400917552460",
            "self": false,
            "source_security_group_id": "sg-03ffe504c82f582d0",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1706185809",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-02c47fe9de8051d8e",
            "self": false,
            "source_security_group_id": "sg-03ffe504c82f582d0",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1995335792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-02901680a3f8e5f01",
            "self": false,
            "source_security_group_id": "sg-03ffe504c82f582d0",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-307190715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-028d0bca91c076a9b",
            "self": false,
            "source_security_group_id": "sg-03ffe504c82f582d0",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1880609912",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-01ea2344f031624e2",
            "self": false,
            "source_security_group_id": "sg-03ffe504c82f582d0",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3055454483",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-0c3abffaa4108cda4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-305992633",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-0d13f7a25d3820d22",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3059920982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09058c8d028147c89",
            "security_group_rule_id": "sgr-04da71e6e0336fb06",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:network-acl/acl-0e481164c6638cf91",
            "default_network_acl_id": "acl-0e481164c6638cf91",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e481164c6638cf91",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "624130542457",
            "subnet_ids": [
              "subnet-014e86bfb3357f765",
              "subnet-030f5720e9bf272f3",
              "subnet-03b25c0d227bade36",
              "subnet-068121921ffc25938",
              "subnet-07be5c5c1460067f0",
              "subnet-0d3fc0fabf202f226"
            ],
            "tags": {
              "Name": "eks_cluster_vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:route-table/rtb-0a7be813164763af9",
            "default_route_table_id": "rtb-0a7be813164763af9",
            "id": "rtb-0a7be813164763af9",
            "owner_id": "624130542457",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "eks_cluster_vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:security-group/sg-0ba25754521d899a8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ba25754521d899a8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "624130542457",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster_vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-default",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0678a0c58c91617c5",
            "domain": "vpc",
            "id": "eipalloc-0678a0c58c91617c5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-224-156-21.compute-1.amazonaws.com",
            "public_ip": "54.224.156.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks_cluster_vpc-us-east-1a",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-us-east-1a",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:internet-gateway/igw-01c286310733d370f",
            "id": "igw-01c286310733d370f",
            "owner_id": "624130542457",
            "tags": {
              "Name": "eks_cluster_vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0678a0c58c91617c5",
            "association_id": "eipassoc-051e5984f43d014ae",
            "connectivity_type": "public",
            "id": "nat-04d9a269690e0a620",
            "network_interface_id": "eni-040ee99db8eb254af",
            "private_ip": "192.0.1.4",
            "public_ip": "54.224.156.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-014e86bfb3357f765",
            "tags": {
              "Name": "eks_cluster_vpc-us-east-1a",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-us-east-1a",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-086f9d489cc319e6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04d9a269690e0a620",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-086f9d489cc319e6a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c286310733d370f",
            "id": "r-rtb-03cb1285cbba78a741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03cb1285cbba78a74",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:route-table/rtb-086f9d489cc319e6a",
            "id": "rtb-086f9d489cc319e6a",
            "owner_id": "624130542457",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks_cluster_vpc-private",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-private",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:route-table/rtb-03cb1285cbba78a74",
            "id": "rtb-03cb1285cbba78a74",
            "owner_id": "624130542457",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks_cluster_vpc-public",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-public",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b29e7520c998c72",
            "route_table_id": "rtb-086f9d489cc319e6a",
            "subnet_id": "subnet-0d3fc0fabf202f226"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca9f729bc84129fb",
            "route_table_id": "rtb-086f9d489cc319e6a",
            "subnet_id": "subnet-030f5720e9bf272f3"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb5a2f03274b3f5e",
            "route_table_id": "rtb-086f9d489cc319e6a",
            "subnet_id": "subnet-03b25c0d227bade36"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bcae798eb8e9207",
            "route_table_id": "rtb-03cb1285cbba78a74",
            "subnet_id": "subnet-014e86bfb3357f765"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0150ee2a98702511d",
            "route_table_id": "rtb-03cb1285cbba78a74",
            "subnet_id": "subnet-07be5c5c1460067f0"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d47920cc8d9ca18d",
            "route_table_id": "rtb-03cb1285cbba78a74",
            "subnet_id": "subnet-068121921ffc25938"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:subnet/subnet-0d3fc0fabf202f226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3fc0fabf202f226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624130542457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_cluster_vpc-private-us-east-1a",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/private_elb": "1"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-private-us-east-1a",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/private_elb": "1"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:subnet/subnet-030f5720e9bf272f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030f5720e9bf272f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624130542457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_cluster_vpc-private-us-east-1b",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/private_elb": "1"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-private-us-east-1b",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/private_elb": "1"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:subnet/subnet-03b25c0d227bade36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b25c0d227bade36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624130542457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_cluster_vpc-private-us-east-1c",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/private_elb": "1"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-private-us-east-1c",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/private_elb": "1"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:subnet/subnet-014e86bfb3357f765",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014e86bfb3357f765",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624130542457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_cluster_vpc-public-us-east-1a",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-public-us-east-1a",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:subnet/subnet-07be5c5c1460067f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07be5c5c1460067f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624130542457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_cluster_vpc-public-us-east-1b",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-public-us-east-1b",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:subnet/subnet-068121921ffc25938",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068121921ffc25938",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "624130542457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_cluster_vpc-public-us-east-1c",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc-public-us-east-1c",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062a1b8da7fc66ba9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:624130542457:vpc/vpc-062a1b8da7fc66ba9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.0.0.0/16",
            "default_network_acl_id": "acl-0e481164c6638cf91",
            "default_route_table_id": "rtb-0a7be813164763af9",
            "default_security_group_id": "sg-0ba25754521d899a8",
            "dhcp_options_id": "dopt-02fbea71e84090205",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062a1b8da7fc66ba9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a7be813164763af9",
            "owner_id": "624130542457",
            "tags": {
              "Name": "eks_cluster_vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "eks_cluster_vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}